# markflow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  quality.yml  release.yml
examples/: business-article.md  math-formula.md  sample.md  tech-article.md
src/: lib.rs  main.rs
src/adapters/: mod.rs  traits.rs  wechat.rs  zhihu.rs
src/cli/: args.rs  commands.rs  mod.rs
src/core/: content.rs  mod.rs  pipeline.rs  processor.rs
src/publishers/: mod.rs  traits.rs
src/web/: mod.rs
tests/: integration_test.rs
